Set fonts family and media queries

--- a/index.html
+++ b/index.html
@@ -1,13 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alata&family=Anton&family=Bai+Jamjuree:wght@400;600&family=Josefin+Sans:wght@300&family=Lora&family=McLaren&family=Tapestry&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>Loop Studios</title>
 </head>
+
 <body>
-    <h1 class="text-2xl font-sans   bg-red-100">Your Tailwind CLI is successfully running...</h1>
+
+
+    <!-- Hero Section  -->
+
+    <section id="hero">
+
+
+        <!-- Hero Container  -->
+
+        <div class="container max-w-6xl mx-auto px-6 py-12">
+
+            <!-- Menu /Logo Container   -->
+
+
+            <nav class="flex justify-between items-center font-bold text-white">
+
+                <!-- Logo  -->
+                <img src="images/logo.svg" alt="">
+
+                <!-- Menu  -->
+
+                <div class="hidden h-10 font-alata md:flex md:space-x-8">
+
+
+                    <!-- Item-group-1  -->
+                    <div class="group">
+                        <a href="#">About</a>
+                        <div class="mx-1 group-hover:border-b group-hover:border-blue-50 duration-200">
+
+                        </div>
+                    </div>
+
+                    <!-- Item-group-2 -->
+                    <div class="group">
+                        <a href="#">Careers</a>
+                        <div class="mx-1 group-hover:border-b group-hover:border-blue-50 duration-200">
+
+                        </div>
+                    </div>
+
+                    <!-- Item-group-3  -->
+                    <div class="group">
+                        <a href="#">Events</a>
+                        <div class="mx-1 group-hover:border-b group-hover:border-blue-50 duration-200">
+
+                        </div>
+                    </div>
+
+                    <!-- Item-group-4 -->
+                    <div class="group">
+                        <a href="#">Products</a>
+                        <div class="mx-1 group-hover:border-b group-hover:border-blue-50 duration-200">
+
+                        </div>
+                    </div>
+
+                    <!-- Item-group-5 -->
+                    <div class="group">
+                        <a href="#">Support</a>
+                        <div class="mx-1 group-hover:border-b group-hover:border-blue-50 duration-200">
+
+                        </div>
+                    </div>
+            </nav>
+        </div>
+    </section>
 </body>
+
 </html>
