--- a/index.html
+++ b/index.html
@@ -116,6 +116,30 @@
                 <h2 class="max-w-lg mt-10 mb-6 font-sans text-4xl text-center text-gray-900 uppercase md:text-5xl mt-0 md:text-left">The leader in interactive VR</h2>
 
                 <p class="max-w-md text-center md:text-left">Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to their brand. </p>
+
+            </div>
+        </div>
+    </section>
+
+
+
+    <!-- Creation Section  -->
+
+    <section id="creation">
+
+
+
+        <!-- Creation Container  -->
+
+        <div class="container max-w-6xl mx-auto my-32 px-6 text-gray-900 md:px-0">
+            
+
+            <!-- Creation Header  -->
+
+            <div class="flex justify-center mb-20 md:justify-between">
+                <h2 class="text-4xl uppercase text-center md:text-left md:text-5xl">Our Creations</h2>
+                
+                <button class="hidden px-8 py-2 my-0 font-bold uppercase tracking-widest border-2 border-black font-alata hover:bg-black hover:text-white md:block">See All</button>
             </div>
         </div>
     </section>
