--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </div>
 
 
-            <!-- Items Container-1  -->
+            <!-- ITEM CONTAINER-1  -->
 
             <div class="item-container">
 
@@ -277,7 +277,7 @@
             
 
 
-            <!-- Item Container-2  -->
+            <!-- ITEM CONTAINER -2  -->
 
 
 
@@ -393,6 +393,9 @@
 
             </div>
             </div>
+
+
+            <!-- BUTTON CONTAINER  -->
             <button class="btn md:hidden block w-full mx-auto">See All</button>
         </div>
     </section>
