--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>Loop Studios</title>
+    <script src="js/script.js" defer></script>
 
-    <script>
-        document.getElementById("")
-    </script>
+    
 </head>
 
 <body>
@@ -82,14 +81,14 @@
 
                         </div>
                     </div>
-                    <!-- Hamburger Button  -->
+        <!-- -----------HAMBURGER BUTTON-------------- -->
 
 
 
 
                 </div>
                 <div class="md:hidden">
-                    <button class="block hamburger open z-50 md:hidden focus:outline-none" id="menu-btn" type="button">
+                    <button class="block hamburger z-50 md:hidden focus:outline-none" id="menu-button" type="button">
                         <span class="hamburger-top"></span>
                         <span class="hamburger-middle"></span>
                         <span class="hamburger-bottom"></span>
@@ -98,7 +97,11 @@
             </nav>
 
 
-            <!-- @todo -Mobile Menu  -->
+            <!--Mobile Menu  -->
+
+            <div id="menu" class="absolute top-0 bottom-0 left-0 right-0 hidden flex-col self-end  w-full min-h-screen py-1 pt-40 pl-10 space-y-3 text-lg text-white uppercase bg-black ">
+                <a href="#" class="hover:scale-95 hover:text-pink-500 duration-200">About</a><a href="#" class="hover:scale-95 hover:text-pink-500 duration-200">Careers</a><a href="#" class="hover:scale-95 hover:text-pink-500 duration-200">Events</a><a href="#" class="hover:scale-95 hover:text-pink-500 duration-200">Products</a><a href="#" class="hover:scale-95 hover:text-pink-500 duration-200">Support</a>
+            </div>
 
 
 
