Added some animations

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Loop Studios</title>
     <script src="js/script.js" defer></script>
 
-    
+
 </head>
 
 <body>
@@ -81,7 +81,7 @@
 
                         </div>
                     </div>
-        <!-- -----------HAMBURGER BUTTON-------------- -->
+                    <!-- -----------HAMBURGER BUTTON-------------- -->
 
 
 
@@ -99,8 +99,13 @@
 
             <!--Mobile Menu  -->
 
-            <div id="menu" class="absolute top-0 bottom-0 left-0 right-0 hidden flex-col self-end  w-full min-h-screen py-1 pt-40 pl-10 space-y-3 text-lg text-white uppercase bg-black ">
-                <a href="#" class="hover:scale-95 hover:text-pink-500 duration-200">About</a><a href="#" class="hover:scale-95 hover:text-pink-500 duration-200">Careers</a><a href="#" class="hover:scale-95 hover:text-pink-500 duration-200">Events</a><a href="#" class="hover:scale-95 hover:text-pink-500 duration-200">Products</a><a href="#" class="hover:scale-95 hover:text-pink-500 duration-200">Support</a>
+            <div id="menu"
+                class="absolute top-0 bottom-0 left-0 right-0 hidden flex-col self-end  w-full min-h-screen py-1 pt-40 pl-10 space-y-3 text-lg text-white uppercase bg-black ">
+                <a href="#" class="hover:scale-95 hover:text-pink-500 duration-200">About</a><a href="#"
+                    class="hover:scale-95 hover:text-pink-500 duration-200">Careers</a><a href="#"
+                    class="hover:scale-95 hover:text-pink-500 duration-200">Events</a><a href="#"
+                    class="hover:scale-95 hover:text-pink-500 duration-200">Products</a><a href="#"
+                    class="hover:scale-95 hover:text-pink-500 duration-200">Support</a>
             </div>
 
 
@@ -463,34 +468,34 @@
 
                         <!-- Item 1  -->
 
-                        <div class="h-10 group">
-                            <a href="#">About</a>
-                            <div class="mx-1 group-hover:border-b group-hover:border-white duration-200"></div>
+                        <div class="h-10 group relative" id="nav__link1">
+
+                            <div class="w-0 " id="1"></div><a href="#">About</a>
                         </div>
                         <!-- Item 2  -->
 
-                        <div class="h-10 group">
-                            <a href="#">Careers</a>
-                            <div class="mx-1 group-hover:border-b group-hover:border-white duration-200"></div>
+                        <div class="h-10 group relative" id="nav__link2">
+
+                            <div class="w-0 " id="2"></div><a href="#">Careers</a>
                         </div>
                         <!-- Item 3  -->
 
-                        <div class="h-10 group">
-                            <a href="#">Events</a>
-                            <div class="mx-1 group-hover:border-b group-hover:border-white duration-200"></div>
+                        <div class="h-10 group relative" id="nav__link3">
+
+                            <div class="w-0 " id="3"></div><a href="#">Events</a>
                         </div>
                         <!-- Item 4  -->
 
-                        <div class="h-10 group">
-                            <a href="#">Products</a>
-                            <div class="mx-1 group-hover:border-b group-hover:border-white duration-200"></div>
+                        <div class="h-10 group relative" id="nav__link4">
+
+                            <div class="w-0 " id="4"></div><a href="#">Products</a>
                         </div>
 
                         <!-- Item 5  -->
 
-                        <div class="h-10 group">
-                            <a href="#">Support</a>
-                            <div class="mx-1 group-hover:border-b group-hover:border-white duration-200"></div>
+                        <div class="h-10 group relative" id="nav__link5">
+
+                            <div class="w-0 " id="5"></div><a href="#">Support</a>
                         </div>
                     </div>
 
