--- a/index.html
+++ b/index.html
@@ -537,6 +537,7 @@
 
                     <div class="flex flex-col justify-center items-center md:justify-end font-bold select-none">
                         &copy; 2023 LoopStudios. All Rights Reserved.
+                        <span>Made with 💘 by Sachin Dsilva</span>
                     </div>
                 </div>
             </div>
